# polybot

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BUGS.md  CHANGES.md  README.md  SETUP.md  VALIDATION.md  alembic.ini  docker-compose.lowmem.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: categories.yaml  gates.yaml  risk.yaml
dashboard/: .dockerignore  next.config.js  package.json  tailwind.config.ts
dashboard/src/: middleware.ts
data/migrations/: env.py
docs/: V2_LIVE_MIGRATION.md  api-cheatsheet.md  hosting.md  strategy-research-log.md
infra/deploy/: contabo-setup.sh
infra/nginx/: Caddyfile
infra/postgres/: init.sql
scripts/: _audit_winners.py  _check_stats.py  _dist.sql  _probe_wallet.py  _top.sql  _wallet_stats_audit.sql  backfill_categories.py  backfill_market_outcomes.py  backfill_old_fees.py  backfill_trades.py  backup.sh  btc_position_analysis.py  calibration_backtest.py  category_winrate.py  compute_correlations.py  cross_venue_divergence.py  crypto_fairvalue_backtest.py  crypto_momentum_backtest.py  diag.sh  diag_crypto.py  discover_wallets.py  exit_quality.py  favorite_backtest.py  fix_b14_normalise_case.py  fix_b14_swap_outcomes.py  kill_switch.py  live_pnl.py  ops_check.py  push_backup_to_github.sh  restore.sh  seed_categories.py  side_bias.py  validate.py  verify_gates.py  weather_forecast_probe.py  weather_grade.py  weather_market_full.py  weather_market_probe.py  weather_market_test.py  weather_paper.py  (+6 more)
services/_base/: Dockerfile
services/api/: deps.py  main.py  rate_limit.py
services/clob-rs/: Cargo.toml  Dockerfile
services/clob-rs/src/: main.rs
services/executor/: close.py  equity_guard.py  exit_loop.py  exit_rules.py  live.py  main.py  (+3 more)
tests/: conftest.py  test_alerts_throttle.py  test_balance_units.py  test_calibration_backtest.py  test_categorize_mlb.py  test_category_winrate.py  test_close_path.py  test_cluster_decay.py  test_cross_venue_divergence.py  test_crypto_factor_exposure.py  test_crypto_fairvalue_backtest.py  test_crypto_timeframe_conflict.py  test_discovery_ranking.py  test_entry_gates.py  test_equity_guard.py  test_exit_cluster.py  test_exit_decision.py  test_exit_preflight.py  test_exit_quality.py  test_exit_rules.py  test_favorite_backtest.py  test_gates.py  test_live_pnl.py  test_paper_position_math.py  test_paper_walk.py  test_politics_candidate_conflict.py  test_position_sizing.py  test_price_region.py  test_risk_shorts.py  test_same_day_bucket_conflict.py  test_side_bias.py  test_statarb_persistence.py  test_statarb_relations.py  test_stats.py  test_weather_grade.py  test_weather_market_full.py  test_weather_market_probe.py  test_weather_market_test.py  test_weather_paper.py  test_weather_pnl.py  (+3 more)
(+83 files in other folders)
