[project]
name = "polybot"
version = "0.1.0"
description = "Polymarket smart-money mirror framework"
requires-python = ">=3.12"

dependencies = [
  # polymarket clients
  "py-clob-client-v2>=0.1.0",
  "polymarket-apis>=0.5.7",
  # http / ws
  "httpx>=0.27",
  "websockets>=13",
  "tenacity>=9",
  # data
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "redis>=5.0",
  "pandas>=2.2",
  "numpy>=2.0",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  # web
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  # workers
  "celery[redis]>=5.4",
  # blockchain
  "web3>=7.0",
  "eth-account>=0.13",
  # ops
  "structlog>=24.4",
  "sentry-sdk[fastapi]>=2.0",
  "python-telegram-bot>=21",
  "pyyaml>=6.0",
  "click>=8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.7",
  "mypy>=1.13",
  "httpx[cli]>=0.27",
  "ipython>=8.27",
]

[tool.setuptools]
package-dir = {"" = "packages"}

[tool.setuptools.packages.find]
where = ["packages"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
