[package]
name = "clob-rs"
version = "0.1.0"
edition = "2021"

# Order-signing sidecar for Polymarket CLOB V2 (deposit-wallet / POLY_1271).
# The Python bot calls this over HTTP (see packages/polybot/clients/clob.py).
# The actual signing crate (rs-clob-client-v2) is added once its API is pinned;
# this skeleton stands up the HTTP surface + health so we can verify the Rust
# build pipeline in Docker before wiring in real order placement.

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rs-clob-client-v2 = "0.2"   # ← enabled in Phase 2 once the API is pinned

[profile.release]
opt-level = 2
