[package]
name = "clob-rs"
version = "0.1.0"
edition = "2021"

# Order-signing sidecar for Polymarket CLOB V2 (deposit-wallet / POLY_1271).
# The Python bot calls this over HTTP (see packages/polybot/clients/clob.py).

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
polymarket_client_sdk_v2 = { version = "=0.6.0-canary.1", features = ["clob"] }
# Pinned to the SDK's alloy version so the signer type unifies with the SDK.
alloy-signer-local = "=1.8.3"

[profile.release]
opt-level = 2
